# teamcity-try

./: vmi.sh
Docker/: Dockerfile
asteroid/: CMakeLists.txt  README.md
asteroid/src/: CMakeLists.txt
asteroid/test/: CMakeLists.txt
test/: DownloadProject.CMakeLists.cmake.in  tst_example.cpp
